--- a/src/main/resources/com/habit/client/gui/TeamTop.fxml
+++ b/src/main/resources/com/habit/client/gui/TeamTop.fxml
@@ -11,6 +11,7 @@
             <Button fx:id="btnBackHome" text="ホームに戻る"/>
             <Label fx:id="teamNameLabel" text="チーム名" style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
             <Button fx:id="btnToPersonal" text="個人画面へ"/>
+            <Button fx:id="btnToChat" text="チャットページへ"/>
         </HBox>
     </top>
     <center>
