--- a/src/main/resources/com/habit/client/gui/TeamTop.fxml
+++ b/src/main/resources/com/habit/client/gui/TeamTop.fxml
@@ -9,6 +9,7 @@
     <top>
         <HBox spacing="20" alignment="CENTER">
             <Button fx:id="btnBackHome" text="ホームに戻る"/>
+            <Button fx:id="btnCreateTask" text="タスク作成"/>
             <Label fx:id="teamNameLabel" text="チーム名" style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
             <Button fx:id="btnToPersonal" text="個人画面へ"/>
             <Button fx:id="btnToChat" text="チャットページへ"/>
