チャット画面にチーム名表示

--- a/src/main/resources/com/habit/client/gui/Chat.fxml
+++ b/src/main/resources/com/habit/client/gui/Chat.fxml
@@ -2,6 +2,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.habit.client.ChatController">
+    <Label fx:id="teamNameLabel" layoutX="20" layoutY="0" prefWidth="360" prefHeight="20" text="チーム名"/>
     <ListView fx:id="chatList" layoutX="20" layoutY="20" prefWidth="360" prefHeight="300"/>
     <TextField fx:id="chatInput" layoutX="20" layoutY="330" prefWidth="280"/>
     <Button fx:id="btnSend" text="送信" layoutX="310" layoutY="330" prefWidth="70"/>
