--- a/src/main/resources/com/habit/client/gui/PersonalPage.fxml
+++ b/src/main/resources/com/habit/client/gui/PersonalPage.fxml
@@ -6,6 +6,10 @@
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.habit.client.PersonalPageController" spacing="20" alignment="CENTER" prefWidth="900" prefHeight="700">
     <Label text="個人ページ（タスク管理）" style="-fx-font-size: 24px;" />
-    <TilePane fx:id="taskTilePane" hgap="30" vgap="30" prefColumns="2" alignment="CENTER" prefTileWidth="350" prefTileHeight="180" maxWidth="800" />
+    <ScrollPane fitToWidth="true" prefHeight="500" maxWidth="800">
+        <content>
+            <TilePane fx:id="taskTilePane" hgap="30" vgap="30" prefColumns="2" alignment="CENTER" prefTileWidth="350" prefTileHeight="180" maxWidth="800" />
+        </content>
+    </ScrollPane>
     <Button fx:id="btnBackToTeam" text="チームトップページに戻る" style="-fx-font-size: 16px;" />
 </VBox>
