--- a/src/main/resources/com/habit/client/gui/Login.fxml
+++ b/src/main/resources/com/habit/client/gui/Login.fxml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.habit.client.LoginController" spacing="10" alignment="CENTER" prefWidth="300" prefHeight="220">
-    <Label text="HabitLink" style="-fx-font-size: 24px; -fx-font-family: 'Arial Black'; -fx-text-fill:rgb(100, 170, 250); -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 5, 0.5, 2, 2);" />
-    <Label text="ログイン / 新規登録" />
-    <TextField fx:id="usernameField" promptText="ユーザ名"/>
-    <PasswordField fx:id="passwordField" promptText="パスワード"/>
-    <Button fx:id="btnLogin" text="ログイン" onAction="#handleLoginButtonAction"/>
-    <Button fx:id="btnSwitchMode" text="新規登録モードへ"/>
-    <Label fx:id="loginStatusLabel" text=""/>
+
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" spacing="10" stylesheets="@login.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.habit.client.LoginController">
+    <Label style="-fx-font-size: 60; -fx-font-family: 'Arial Black'; -fx-text-fill: rgb(100, 170, 250); -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 5, 0.5, 2, 2);" text="HabitLink">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+    <Label style="-fx-font-family: Hiragino Sans;" text="ログイン / 新規登録">
+      <font>
+         <Font name="Arial Bold" size="12.0" />
+      </font>
+   </Label>
+    <TextField fx:id="usernameField" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="200.0" promptText="ユーザ名" />
+    <PasswordField fx:id="passwordField" maxWidth="-Infinity" prefWidth="200.0" promptText="パスワード" />
+    <Button fx:id="btnLogin" onAction="#handleLoginButtonAction" text="ログイン" />
+    <Button fx:id="btnSwitchMode" text="新規登録モードへ" />
+    <Label fx:id="loginStatusLabel" text="" />
 </VBox>
