--- a/src/main/resources/com/habit/client/gui/Home.fxml
+++ b/src/main/resources/com/habit/client/gui/Home.fxml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.habit.client.HomeController" prefWidth="600" prefHeight="350">
+<BorderPane prefHeight="350" prefWidth="600" stylesheets="@home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.habit.client.HomeController">
     <left>
-        <VBox alignment="CENTER">
-            <Label fx:id="cheerMessageLabel" text="" style="-fx-font-size: 14px; -fx-background-color: #fffbe7; -fx-border-color: #cccccc; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 8; -fx-text-fill: #3a3a3a;" wrapText="true" maxWidth="250" alignment="CENTER_LEFT"/>
-            <ImageView fx:id="characterView" fitWidth="80" fitHeight="120"/>
+        <VBox alignment="CENTER" styleClass="vBox">
+            <Label fx:id="cheerMessageLabel" alignment="CENTER_LEFT" focusTraversable="false" maxWidth="250" style="-fx-font-size: 14px; -fx-background-color: #87cefa; -fx-border-color: #cccccc; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 8; -fx-text-fill: #3a3a3a;" text="" wrapText="true" />
+            <ImageView fx:id="characterView" fitHeight="120" fitWidth="80" />
         </VBox>
     </left>
     <center>
-        <ListView fx:id="teamListView" prefWidth="200"/>
+        <ListView fx:id="teamListView" prefWidth="200" styleClass="listView" />
     </center>
     <right>
-        <VBox alignment="CENTER" spacing="20" minWidth="120">
-            <Button fx:id="btnToCreateTeam" text="チーム作成"/>
-            <Button fx:id="btnToSearchTeam" text="チーム検索"/>
+        <VBox alignment="CENTER" minWidth="120" spacing="20" styleClass="vBox">
+            <Button fx:id="btnToCreateTeam" pickOnBounds="false" styleClass="custom-button" text="チーム作成" />
+            <Button fx:id="btnToSearchTeam" pickOnBounds="false" styleClass="custom-button" text="チーム検索" />
         </VBox>
     </right>
 </BorderPane>
