--- a/src/main/resources/com/habit/client/gui/Home.fxml
+++ b/src/main/resources/com/habit/client/gui/Home.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -7,18 +8,24 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="350" prefWidth="600" stylesheets="@home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.habit.client.HomeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350" prefWidth="600" stylesheets="@home.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.habit.client.HomeController">
     <left>
         <VBox alignment="CENTER" styleClass="vBox">
-            <Label fx:id="cheerMessageLabel" alignment="CENTER_LEFT" focusTraversable="false" maxWidth="250" style="-fx-font-size: 14px; -fx-background-color: #87cefa; -fx-border-color: #cccccc; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 8; -fx-text-fill: #3a3a3a;" text="" wrapText="true" />
+            <Label fx:id="cheerMessageLabel" alignment="CENTER_LEFT" focusTraversable="false" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="250.0" text="" wrapText="true">
+            <VBox.margin>
+               <Insets left="5.0" />
+            </VBox.margin></Label>
             <ImageView fx:id="characterView" fitHeight="120" fitWidth="80" />
         </VBox>
     </left>
     <center>
-        <ListView fx:id="teamListView" prefWidth="200" styleClass="listView" />
+        <ListView fx:id="teamListView" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="200" styleClass="listView">
+         <BorderPane.margin>
+            <Insets bottom="20.0" top="20.0" />
+         </BorderPane.margin></ListView>
     </center>
     <right>
-        <VBox alignment="CENTER" minWidth="120" spacing="20" styleClass="vBox">
+        <VBox alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="120.0" spacing="20" styleClass="vBox">
             <Button fx:id="btnToCreateTeam" pickOnBounds="false" styleClass="custom-button" text="チーム作成" />
             <Button fx:id="btnToSearchTeam" pickOnBounds="false" styleClass="custom-button" text="チーム検索" />
         </VBox>
