--- a/src/main/resources/com/habit/client/gui/home.css
+++ b/src/main/resources/com/habit/client/gui/home.css
@@ -1,3 +1,7 @@
+.root{
+	-fx-background-color: #e0ffff;
+}
+
 .custom-button{
 	-fx-background-color:  #87cefa;
 	-fx-background-radius: 20pt;
@@ -6,11 +10,7 @@
 	-fx-border-radius: 20pt;
 }
 
-.custom-button:focus{
-	-fx-border-color: #000080;
-}
-
-.custom-button:hover{
+.custom-button:hover, .custom-button:focused{
 	-fx-background-color: #00bfff;
 	-fx-border-color: #000080;
 }
@@ -20,5 +20,45 @@
 }
 
 .listView{
-	-fx-background-color: #f0ffff;
+	-fx-background-radius: 20pt;
+	-fx-background-insets: 0;
+	-fx-padding: 8;
 }
+
+.listView .list-cell{
+	-fx-background-color: #f0ffff;
+	-fx-alignment: center;
+	-fx-text-alignment: center;
+	-fx-background-radius: 20pt;
+	-fx-background-insets: 4;
+	-fx-padding: 8;
+	-fx-border-color: transparent;
+	-fx-border-radius: 20pt;
+}
+
+.listView .list-cell:filled{
+	-fx-background-color: #00bfff;
+
+	-fx-border-width: 1pt;
+	-fx-border-color: #00bfff;
+
+	
+}
+
+.listView .list-cell:filled:hover, .listView .listcell:filled:selected{
+	-fx-background-color: #1e90ff;
+	-fx-border-color: #000080;
+
+}
+
+.label{
+	-fx-font-size: 14px;
+	-fx-background-color: #87cefa;
+	-fx-border-color: #cccccc;
+	-fx-border-radius: 10;
+	-fx-background-radius: 10;
+	-fx-padding: 8;
+	-fx-text-fil: #3a3a3a;
+	-fx-alignment: center;
+}
+
