--- a/src/main/resources/com/habit/client/gui/login.css
+++ b/src/main/resources/com/habit/client/gui/login.css
@@ -3,12 +3,21 @@
 }
 
 .button {
-    -fx-background-color: #1e90ff;
     -fx-text-fill: white;
     -fx-font-weight: bold;
-    -fx-background-radius: 5;
+	-fx-background-color: #1e90ff;
+    -fx-background-radius: 15;
+	-fx-border-radius: 15;
+	-fx-border-width: 1pt;
+	-fx-border-color: #1e90ff;
 }
 
 .button:hover {
     -fx-background-color: #00bfff;
+	-fx-border-color: #000080;
+}
+
+.button:focused{
+	-fx-background-color: #00bfff;
+	-fx-border-color: #000080;
 }
