--- a/src/main/resources/com/habit/client/gui/Chat.fxml
+++ b/src/main/resources/com/habit/client/gui/Chat.fxml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.habit.client.ChatController">
-    <Label fx:id="teamNameLabel" layoutX="20" layoutY="0" prefWidth="360" prefHeight="20" text="チーム名"/>
-    <ListView fx:id="chatList" layoutX="20" layoutY="20" prefWidth="360" prefHeight="300"/>
-    <TextField fx:id="chatInput" layoutX="20" layoutY="330" prefWidth="280"/>
-    <Button fx:id="btnSend" text="送信" layoutX="310" layoutY="330" prefWidth="70"/>
-    <Button fx:id="btnBackToTeamTop" text="チームトップへ戻る" layoutX="20" layoutY="370" prefWidth="120"/>
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane stylesheets="@Chat.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.habit.client.ChatController">
+    <Label fx:id="teamNameLabel" layoutX="20" layoutY="0" prefHeight="20" prefWidth="360" text="チーム名" AnchorPane.leftAnchor="20.0" />
+    <ListView fx:id="chatList" focusTraversable="false" layoutX="20" layoutY="20" prefHeight="300" prefWidth="360" styleClass="listView" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+    <TextField fx:id="chatInput" layoutX="20" layoutY="330" prefWidth="280" AnchorPane.leftAnchor="20.0" />
+    <Button fx:id="btnSend" layoutX="310" layoutY="330" prefWidth="70" text="送信" AnchorPane.leftAnchor="310.0" />
+    <Button fx:id="btnBackToTeamTop" layoutX="20" layoutY="370" prefWidth="120" text="チームトップへ戻る" AnchorPane.leftAnchor="20.0" />
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </AnchorPane>
