--- a/src/main/resources/com/habit/client/gui/Chat.css
+++ b/src/main/resources/com/habit/client/gui/Chat.css
@@ -2,21 +2,22 @@
 	-fx-background-color: #e0ffff;
 }
 
+
 .button{
-	-fx-background-color:  #87cefa;
+	-fx-background-color:  #90caf9;
 	-fx-background-radius: 20pt;
 	-fx-border-width: 1pt;
-	-fx-border-color: #87cefa;
+	-fx-border-color: #90caf9;
 	-fx-border-radius: 20pt;
 }
 
 .button:hover, .button:focused{
-	-fx-background-color: #00bfff;
+	-fx-background-color: #b3d8fa;
 	-fx-border-color: #000080;
 }
 
 .listView{
-    -fx-focus-traversable: false;
+	-fx-focus-traversable: false;
 	-fx-background-radius: 20pt;
 	-fx-background-insets: 0; 
 	-fx-padding: 8;
@@ -30,5 +31,5 @@
 }
 
 .listView .list-cell:filled{
-	-fx-background-color: #00bfff;
+	-fx-background-color: #b3d8fa;
 }
