--- a/src/main/resources/com/habit/client/gui/login.css
+++ b/src/main/resources/com/habit/client/gui/login.css
@@ -16,3 +16,17 @@
     -fx-background-color: #00bfff;
 	-fx-border-color: #000080;
 }
+
+#switchModeButton {
+    -fx-background-color: transparent; /* 背景を透明に */
+    -fx-text-fill: #1e90ff; /* 青色のテキスト */
+    -fx-border-color: transparent; /* ボーダーも透明に */
+    -fx-font-weight: normal; /* 太字ではない */
+    -fx-font-size: 14px;
+    -fx-underline: true; /* 下線 */
+    -fx-padding: 5px; /* パディングを調整 */
+}
+
+#switchModeButton:hover {
+    -fx-text-fill: #00bfff; /* ホバーで色を変える */
+}
