--- a/src/main/resources/com/habit/client/gui/TaskCreate.fxml
+++ b/src/main/resources/com/habit/client/gui/TaskCreate.fxml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.habit.client.TaskCreateController" prefWidth="400" prefHeight="350">
-    <VBox spacing="16" alignment="CENTER" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
-        <Label text="タスク作成" style="-fx-font-size: 20px;"/>
-        <HBox spacing="10">
-            <Label text="タスク名"/>
-            <TextField fx:id="taskNameField" promptText="タスク名"/>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<AnchorPane prefHeight="350" prefWidth="400" stylesheets="@TaskCreate.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.habit.client.TaskCreateController">
+    <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Label style="-fx-font-size: 20px;" text="タスク作成" />
+        <HBox alignment="CENTER" spacing="10">
+            <Label text="タスク名">
+            <HBox.margin>
+               <Insets />
+            </HBox.margin></Label>
+            <TextField fx:id="taskNameField" promptText="タスク名" />
         </HBox>
-        <HBox spacing="10">
-            <Label text="期限日付"/>
-            <TextField fx:id="dueDateField" promptText="例: 2025-07-02 (省略可)"/>
+        <HBox alignment="CENTER" spacing="10">
+            <Label text="期限日付">
+            <HBox.margin>
+               <Insets />
+            </HBox.margin></Label>
+            <TextField fx:id="dueDateField" promptText="例: 2025-07-02 (省略可)" />
         </HBox>
-        <HBox spacing="10">
-            <Label text="周期"/>
-            <ChoiceBox fx:id="cycleTypeChoice"/>
+        <HBox alignment="CENTER" spacing="10">
+            <Label text="周期">
+            <HBox.margin>
+               <Insets />
+            </HBox.margin></Label>
+            <ChoiceBox fx:id="cycleTypeChoice" styleClass="my-button" />
         </HBox>
-        <Button fx:id="btnCreate" text="作成" maxWidth="120" onAction="#handleBtnCreate"/>
-        <Button fx:id="btnCancel" text="やめる" maxWidth="120" onAction="#handleBtnCancel"/>
+        <Button fx:id="btnCreate" maxWidth="120" onAction="#handleBtnCreate" styleClass="my-button" text="作成" />
+        <Button fx:id="btnCancel" alignment="BOTTOM_CENTER" maxWidth="120" onAction="#handleBtnCancel" styleClass="my-button" text="やめる">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin></Button>
     </VBox>
 </AnchorPane>
