未完了タスクアイコンの色調整

--- a/src/main/resources/com/habit/client/gui/Teamtop.css
+++ b/src/main/resources/com/habit/client/gui/Teamtop.css
@@ -87,7 +87,7 @@
 }
 
 .todayTaskList .list-cell:filled{
-    -fx-background-color: #60de9f;
+    -fx-background-color: #87cefa;
     -fx-border-color: transparent;
 }
 
