--- a/src/main/resources/com/habit/client/gui/Tutorial.fxml
+++ b/src/main/resources/com/habit/client/gui/Tutorial.fxml
@@ -6,6 +6,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
 <StackPane stylesheets="@Tutorial.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.habit.client.TutorialController">
@@ -24,8 +27,11 @@
     <TextFlow fx:id="speechTextFlow" maxWidth="700" minHeight="100" minWidth="500" style="-fx-background-color: #e0ffff; -fx-border-color: #cccccc; -fx-border-radius: 15; -fx-background-radius: 15; -fx-padding: 30; -fx-effect: dropshadow(gaussian, lightgray, 10, 0.3, 2, 2); -fx-text-alignment: center;" textAlignment="CENTER">
     </TextFlow>
 
+        <HBox alignment="CENTER" spacing="20">
+            <Button onAction="#handleSkip" style="-fx-font-size: 12pt; -fx-padding: 8 16;" styleClass="my-button" text="Skip" />
+            <Button onAction="#handleNext" style="-fx-font-size: 12pt; -fx-padding: 8 16;" styleClass="my-button" text="次へ" />
 
-        <Button onAction="#handleSkip" style="-fx-font-size: 12pt; -fx-padding: 8 16;" styleClass="my-button" text="Skip" />
+        </HBox>
 
     </VBox>
 </StackPane>
